<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_ada</name>
  <version>0.1.0</version>
  <description>Generates the ROS2 interfaces for Ada</description>
  <maintainer email="amosteo@unizar.es">Alejandro R. Mosteo</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclada_common</depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_generator_c</depend>
  <depend>rosidl_typesupport_interface</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>std_msgs</depend>

  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_generator_packages</member_of_group>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
